--- a/app/src/main/res/layout/activity_final_page.xml
+++ b/app/src/main/res/layout/activity_final_page.xml
@@ -13,7 +13,7 @@
         android:padding="25dp"
         android:text="SUCCESSFUL!!!"
         android:textAlignment="center"
-        android:textColor="#242424"
+        android:textColor="@color/design_default_color_primary"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/messageDone"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,9 +48,7 @@
         android:id="@+id/finish"
         android:layout_width="191dp"
         android:layout_height="49dp"
-        android:backgroundTint="#36ACEC"
-        android:text="finish"
-        android:textColor="#FFFFFF"
+        android:text="FINISH"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
