--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,10 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/aptBookBtn"
-        android:layout_width="109.84dp"
+        android:id="@+id/aptButton"
+        android:layout_width="278dp"
         android:layout_height="57dp"
-        android:backgroundTint="#36ACEC"
-        android:text="Book Now"
-        android:textColor="#FFFFFF"
+        android:text="Book Your Appointment"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
