--- a/app/src/main/res/layout/splashfile.xml
+++ b/app/src/main/res/layout/splashfile.xml
@@ -7,10 +7,9 @@
 
     <ImageView
         android:id="@+id/logo_id"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        android:layout_centerInParent="true"
-        android:src="@drawable/logo"/>
+        android:layout_width="410dp"
+        android:layout_height="wrap_content"
+        android:src="@drawable/logo" />
 
 
 </RelativeLayout>
